--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -78,6 +78,10 @@ function calculateAndDisplayRoute(directionsService, num, markersShow) {
   }
   var origin = {lat: placesDB[numInit].lat, lng: placesDB[numInit].long},
     destination = {lat: placesDB[num].lat, lng: placesDB[num].long};
+  if(placesDB.length-num < 40){
+    console.log(origin);
+    console.log(destination);
+  }
   directionsService.route({
     origin: origin,
     destination: destination,
@@ -87,7 +91,7 @@ function calculateAndDisplayRoute(directionsService, num, markersShow) {
   }, function(response, status) {
     if (status === google.maps.DirectionsStatus.OK) {
       renderDirections(response, markersShow);
-      if(num<placesDB.length-1) setTimeout(calculateAndDisplayRoute, 2000, directionsService, num+2, true);
+      if(num<placesDB.length-1) setTimeout(calculateAndDisplayRoute, 2000, directionsService, num+1, true);
     } else {
       window.alert('Directions request failed due to ' + status);
     }
