--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -63,9 +63,8 @@ function calculateAndDisplayRoute(directionsService, num, markersShow) {
     whileNum = 0,
     numInit = num;
   while(whileStop){
-    if(placesDB.length-num < 40){
-      console.log(placesDB[num].lat);
-      console.log(placesDB[num].long);
+    if(placesDB.length-num < 100){
+      console.log(num);
     }
     waypts.push({
       location: new google.maps.LatLng(placesDB[num].lat, placesDB[num].long),
@@ -78,10 +77,6 @@ function calculateAndDisplayRoute(directionsService, num, markersShow) {
   }
   var origin = {lat: placesDB[numInit].lat, lng: placesDB[numInit].long},
     destination = {lat: placesDB[num].lat, lng: placesDB[num].long};
-  if(placesDB.length-num < 40){
-    console.log(origin);
-    console.log(destination);
-  }
   directionsService.route({
     origin: origin,
     destination: destination,
