--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -63,9 +63,6 @@ function calculateAndDisplayRoute(directionsService, num, markersShow) {
     whileNum = 0,
     numInit = num;
   while(whileStop){
-    if(placesDB.length-num < 100){
-      console.log(num);
-    }
     waypts.push({
       location: new google.maps.LatLng(placesDB[num].lat, placesDB[num].long),
       stopover: false
@@ -73,7 +70,7 @@ function calculateAndDisplayRoute(directionsService, num, markersShow) {
     num++;
     whileNum++;
     if(whileNum==8) whileStop=false;
-    if(placesDB.length-2==whileNum){ whileStop=false; console.log("final"); markersShow=false}
+    if(placesDB.length-2==num){ whileStop=false; console.log("final"); markersShow=false}
   }
   var origin = {lat: placesDB[numInit].lat, lng: placesDB[numInit].long},
     destination = {lat: placesDB[num].lat, lng: placesDB[num].long};
