Commit Google Analytics #1 and JavisStops #1

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -444,6 +444,7 @@
         <div>Copyright 2015 @ Imagine XYZ. All Rights Reserved.</div>
       </div>
     </div>
+    <script type="text/javascript" src="js/analyticstracking.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/webflow.js"></script>
     <!--[if lte IE 9]>
