--- a/webpage/index.html
+++ b/webpage/index.html
@@ -383,6 +383,18 @@
               <p class="imagine-blue special2">“Telefónica Movistar has advanced significantly towards becoming a Digital Telco and is now an industry benchmark for innovation. We are convinced that, by promoting an ecosystem of innovation in the country, we generate greater value in terms of the possibilities that technology opens up for people. By supporting the work of Imagine XYZ and initiatives like Hardwarethon, which promote and raise awareness of local talent, we keep moving towards that goal.”</p>
             </div>
             <div class="w-slide testimony-slide">
+              <img class="center-block" width="130" src="images/testimonials/CarlosAlvarado.png">
+              <h3 class="imagine-blue">Carlos Alvarado</h3>
+              <p class="imagine-blue">President at ACAE</p>
+              <p class="imagine-blue special2">“Imagine XYZ is a company with very strong technical capabilities but also with a quite flexible approach in terms of design and innovation. These two characteristics enable them to create wonderful products that are now opening a new model for doing business in the Costa Rican high-tech market.”</p>
+            </div>
+            <div class="w-slide testimony-slide">
+              <img class="center-block" width="130" src="images/testimonials/AlejandroMinatta.png">
+              <h3 class="imagine-blue">Alejandro Minatta</h3>
+              <p class="imagine-blue">Consultant in Strategy, Innovation, Finance, Entrepreneurship and Organizational Joint from Uruguay</p>
+              <p class="imagine-blue special2">“... Find highly qualified talent on global trends is not common in the region; discover proactive people to meet customer needs and resilient against natural difficulties of a business, even less. Imagine XYZ, has the potential to do something important and contribute to their environment in a significant manner ...”</p>
+            </div>
+            <div class="w-slide testimony-slide">
               <img class="center-block" width="130" src="images/testimonials/LuisRosales.png">
               <h3 class="imagine-blue">Luis Carlos Rosales</h3>
               <p class="imagine-blue">ASIC Engineering Program Manager. HP Costa Rica R&amp;D Center.</p>
