--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -1,99 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html>  
   <head>
-    <title>Place searches</title>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <style>
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-      #map {
-        height: 100%;
-      }
-    </style>
-    <script src="assets/js/jquery.min.js"></script>
-    <script>
-/*var map;
-var infowindow;
-var placesNames = [];*/
-var placesDB = [],
-  map;
-
-function checkRoute(){
-  var setHeader = function (req) {
-    req.setRequestHeader('content-type', 'application/json'); 
-    req.setRequestHeader('accept', 'application/json'); 
-  }; 
-  $.ajax({
-    type: "GET",
-    url: "pos/",
-    beforeSend: setHeader,
-    success: function(res){
-      placesDB = res;
-      initMap();
-    }
-  });
-}
-
-function initMap() {
-  var directionsService = new google.maps.DirectionsService;
-  var directionsDisplay = new google.maps.DirectionsRenderer({suppressMarkers: false, suppressInfoWindows:false});
-  map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 3,
-    center: {lat: placesDB[0].lat, lng: placesDB[0].lon}
-  });
-  directionsDisplay.setMap(map);
-
-
-  calculateAndDisplayRoute(directionsService, 1, false);
-}
-
-function renderDirections(result, markersShow) {
-  var directionsRenderer = new google.maps.DirectionsRenderer({suppressMarkers: false, suppressInfoWindows:false});
-  directionsRenderer.setMap(map);
-  directionsRenderer.setDirections(result);
-}
-
-function calculateAndDisplayRoute(directionsService, num, markersShow) {
-  var waypts = [],
-    whileStop = true,
-    whileNum = 0,
-    numInit = num;
-  while(whileStop){
-    waypts.push({
-      location: new google.maps.LatLng(placesDB[num].lat, placesDB[num].lon),
-      stopover: true
-    });
-    num++;
-    whileNum++;
-    if(whileNum==8) whileStop=false;
-    if(placesDB.length-2==num){ whileStop=false; console.log("final"); markersShow=false}
-  }
-  var origin = {lat: placesDB[numInit].lat, lng: placesDB[numInit].lon},
-    destination = {lat: placesDB[num].lat, lng: placesDB[num].lon};
-  directionsService.route({
-    origin: origin,
-    destination: destination,
-    waypoints: waypts,
-    optimizeWaypoints: true,
-    travelMode: google.maps.TravelMode.DRIVING
-  }, function(response, status) {
-    if (status === google.maps.DirectionsStatus.OK) {
-      renderDirections(response, false);
-      if(num<placesDB.length-2) setTimeout(calculateAndDisplayRoute, 2000, directionsService, num+1, true);
-    } else {
-      window.alert('Directions request failed due to ' + status);
-    }
-  })
-}
-
+    <meta name="author" content="ImagineXYZ"> 
+    <title>Imagine XYZ - Research, Design, Innovation, Prototyping and Development </title>
+    <meta name="title" content="Imagine XYZ - Research, Design, Innovation, Prototyping and Development">
+    <meta name="description" content="Imagine XYZ - Research, Design, Innovation, Prototyping and Development">  
+    <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
+    
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGuNB7PRusaF7JKSq-t_crKWKP6H3o3sg&libraries=geometry">
     </script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/underscore-min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/chartDraw.js"></script>
+    
+    <link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/main.css" type="text/css">
   </head>
   <body>
-    <div id="map"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGuNB7PRusaF7JKSq-t_crKWKP6H3o3sg&signed_in=true&libraries=places&callback=checkRoute" async defer></script>
+    <div class="header">
+      <div class="row headerRow">       
+        <div class="col-sm-6">            
+          <img src="assets/img/imagine.png">
+        </div> 
+        <div class="col-sm-6">       
+        </div>
+        <br>
+        <br>
+      </div>
+      <br>
+      <h3><b>Mapa del Recorrido</b></h3>
+      <div id="chart_div1" class="chart"></div>
+      <br>
+      <br>
+    </div>
   </body>
+  <script>
+    $(function() {
+      getPositions();
+    });
+  </script>
 </html>
