--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -62,7 +62,7 @@ function calculateAndDisplayRoute(directionsService, num, markersShow) {
     whileStop = true,
     whileNum = 0,
     numInit = num;
-  /*while(whileStop){
+  while(whileStop){
     waypts.push({
       location: new google.maps.LatLng(placesDB[num].lat, placesDB[num].lon),
       stopover: true
@@ -71,7 +71,7 @@ function calculateAndDisplayRoute(directionsService, num, markersShow) {
     whileNum++;
     if(whileNum==8) whileStop=false;
     if(placesDB.length-2==num){ whileStop=false; console.log("final"); markersShow=false}
-  }*/
+  }
   var origin = {lat: placesDB[numInit].lat, lng: placesDB[numInit].lon},
     destination = {lat: placesDB[num].lat, lng: placesDB[num].lon};
   directionsService.route({
