Commit Web v2 #5 Images About

--- a/webpage/about.html
+++ b/webpage/about.html
@@ -72,7 +72,7 @@
           <div class="row">
             <div class="col-md-3">
               <a href="#" class="team-box">
-                        <img src="images/team/hugo.png" class="img-responsive" alt="">
+                        <img src="images/team/Hugo.png" class="img-responsive" alt="">
                         <div class="team-box-caption">
                             <div class="team-box-caption-content">
                                 <div class="project-category text-faded">
@@ -87,7 +87,7 @@
             </div>
             <div class="col-md-3">
               <a href="#" class="team-box">
-                        <img src="images/team/bryan.png" class="img-responsive" alt="">
+                        <img src="images/team/Bryan.png" class="img-responsive" alt="">
                         <div class="team-box-caption">
                             <div class="team-box-caption-content">
                                 <div class="project-category text-faded">
