Commit Web v2 #7 _blank

--- a/webpage/blog2.html
+++ b/webpage/blog2.html
@@ -33,7 +33,7 @@
           <a class="w-nav-link nav-link" href="#what">what we do</a>
           <a class="w-nav-link nav-link" href="about.html">about</a>
           <a class="w-nav-link nav-link" href="blog.html">blog</a>
-          <a class="w-nav-link nav-link" href="http://www.hardwarethon.com">hardwarethon</a>
+          <a class="w-nav-link nav-link" href="http://www.hardwarethon.com" target="_blank">hardwarethon</a>
           <a class="w-nav-link nav-link" href="#contact">contact</a>
         </nav>
         <div class="w-nav-button menu-button">
@@ -51,7 +51,7 @@
           <a class="w-nav-link nav-link" href="#what">what we do</a>
           <a class="w-nav-link nav-link" href="about.html">about us</a>
           <a class="w-nav-link nav-link" href="blog.html">blog</a>
-          <a class="w-nav-link nav-link" href="http://www.hardwarethon.com">hardwarethon</a>
+          <a class="w-nav-link nav-link" href="http://www.hardwarethon.com" target="_blank">hardwarethon</a>
           <a class="w-nav-link nav-link" href="index.html#contact">contact us</a>
         </nav>
         <div class="w-nav-button menu-button">
