--- a/webpage/blog.html
+++ b/webpage/blog.html
@@ -32,7 +32,7 @@
           <a class="w-nav-link nav-link" href="index.html#what">what we do</a>
           <a class="w-nav-link nav-link" href="about.html">about</a>
           <a class="w-nav-link nav-link" href="blog.html">blog</a>
-          <a class="w-nav-link nav-link" href="http://www.hardwarethon.com">hardwarethon</a>
+          <a class="w-nav-link nav-link" href="http://www.hardwarethon.com" target="_blank">hardwarethon</a>
           <a class="w-nav-link nav-link" href="index.html#contact">contact</a>
         </nav>
         <div class="w-nav-button menu-button">
@@ -48,7 +48,7 @@
           <a class="w-nav-link nav-link" href="index.html#what">what we do</a>
           <a class="w-nav-link nav-link" href="about.html">about us</a>
           <a class="w-nav-link nav-link" href="blog.html">blog</a>
-          <a class="w-nav-link nav-link" href="http://www.hardwarethon.com">hardwarethon</a>
+          <a class="w-nav-link nav-link" href="http://www.hardwarethon.com" target="_blank">hardwarethon</a>
           <a class="w-nav-link nav-link" href="index.html#contact">contact us</a>
         </nav>
         <div class="w-nav-button menu-button">
