Commit Web v2 #8 Medium Blog

--- a/webpage/about.html
+++ b/webpage/about.html
@@ -30,7 +30,7 @@
           <a class="w-nav-link nav-link" href="index.html#why">why do we exist?</a>
           <a class="w-nav-link nav-link" href="index.html#what">what we do</a>
           <a class="w-nav-link nav-link" href="about.html">about</a>
-          <a class="w-nav-link nav-link" href="blog.html">blog</a>
+          <a class="w-nav-link nav-link" href="https://medium.com/@imaginexyz" target="_blank">blog</a>
           <a class="w-nav-link nav-link" href="http://www.hardwarethon.com" target="_blank">hardwarethon</a>
           <a class="w-nav-link nav-link" href="index.html#contact">contact</a>
         </nav>
@@ -46,7 +46,7 @@
           <a class="w-nav-link nav-link" href="index.html#why">why do we exist?</a>
           <a class="w-nav-link nav-link" href="index.html#what">what we do</a>
           <a class="w-nav-link nav-link" href="about.html">about us</a>
-          <a class="w-nav-link nav-link" href="blog.html">blog</a>
+          <a class="w-nav-link nav-link" href="https://medium.com/@imaginexyz" target="_blank">blog</a>
           <a class="w-nav-link nav-link" href="http://www.hardwarethon.com" target="_blank">hardwarethon</a>
           <a class="w-nav-link nav-link" href="index.html#contact">contact us</a>
         </nav>
