--- a/webpage/index.html
+++ b/webpage/index.html
@@ -31,7 +31,7 @@
           <a class="w-nav-link nav-link" href="#why">why do we exist?</a>
           <a class="w-nav-link nav-link" href="#what">what we do</a>
           <a class="w-nav-link nav-link" href="about.html">about</a>
-          <a class="w-nav-link nav-link" href="blog.html">blog</a>
+          <a class="w-nav-link nav-link" href="https://medium.com/@imaginexyz" target="_blank">blog</a>
           <a class="w-nav-link nav-link" href="http://www.hardwarethon.com" target="_blank">hardwarethon</a>
           <a class="w-nav-link nav-link" href="#contact">contact</a>
         </nav>
@@ -47,7 +47,7 @@
           <a class="w-nav-link nav-link" href="#why">why do we exist?</a>
           <a class="w-nav-link nav-link" href="#what">what we do</a>
           <a class="w-nav-link nav-link" href="about.html">about us</a>
-          <a class="w-nav-link nav-link" href="blog.html">blog</a>
+          <a class="w-nav-link nav-link" href="https://medium.com/@imaginexyz" target="_blank">blog</a>
           <a class="w-nav-link nav-link" href="http://www.hardwarethon.com" target="_blank">hardwarethon</a>
           <a class="w-nav-link nav-link" href="#contact">contact us</a>
         </nav>
