--- a/whatsnear/index.html
+++ b/whatsnear/index.html
@@ -32,6 +32,7 @@ function checkRoute(){
     url: "pos/",
     beforeSend: setHeader,
     success: function(res){
+      console.log(res);
       placesDB = res;
       initMap();
     }
@@ -48,7 +49,7 @@ function initMap() {
   directionsDisplay.setMap(map);
 
 
-  calculateAndDisplayRoute(directionsService, 1, false);
+  calculateAndDisplayRoute(directionsService, 0, false);
 }
 
 function renderDirections(result, markersShow) {
@@ -58,10 +59,13 @@ function renderDirections(result, markersShow) {
 }
 
 function calculateAndDisplayRoute(directionsService, num, markersShow) {
+  console.log(placesDB);
   var waypts = [],
     whileStop = true,
     whileNum = 0,
     numInit = num;
+    num++;
+  if(placesDB.length-1==num){ whileStop=false; console.log("final"); markersShow=false}
   while(whileStop){
     waypts.push({
       location: new google.maps.LatLng(placesDB[num].lat, placesDB[num].lon),
@@ -70,7 +74,7 @@ function calculateAndDisplayRoute(directionsService, num, markersShow) {
     num++;
     whileNum++;
     if(whileNum==8) whileStop=false;
-    if(placesDB.length-2==num){ whileStop=false; console.log("final"); markersShow=false}
+    if(placesDB.length-1==num){ whileStop=false; console.log("final"); markersShow=false}
   }
   var origin = {lat: placesDB[numInit].lat, lng: placesDB[numInit].lon},
     destination = {lat: placesDB[num].lat, lng: placesDB[num].lon};
@@ -78,7 +82,7 @@ function calculateAndDisplayRoute(directionsService, num, markersShow) {
     origin: origin,
     destination: destination,
     waypoints: waypts,
-    optimizeWaypoints: true,
+    optimizeWaypoints: false,
     travelMode: google.maps.TravelMode.DRIVING
   }, function(response, status) {
     if (status === google.maps.DirectionsStatus.OK) {
