--- a/webpage/index.html
+++ b/webpage/index.html
@@ -35,12 +35,8 @@
           <!-- Content -->
           <section class="content">
             <p style="font-size: 1.6rem;font-weight: 600;line-height: 1.6;color: #FFF;text-align: center;">We're currently working on our new website!</p>
-            <p style="font-size: 4rem;line-height: 1.5;font-weight: 500; text-align: center;">...
-              <span style="color: #B2D235; font-weight: 800;">Launching</span>
-            </p>
-            <!-- Countdown timer -->
-            <div id="timer"></div>
-            <p style="font-size: 3rem;font-weight: 600;line-height: 1.6;color: #FFF;text-align: center;">We'll keep in touch!</p>
+            <br><br>
+            <p style="font-size: 3rem;font-weight: 600;line-height: 1.6;color: #B2D235;text-align: center;">We'll keep in touch!</p>
             <form id="contact-form" name="contact-form" method="POST" data-name="Contact Form" style="opacity: 0.6">
               <div class="col-xs-12 col-sm-12 col-lg-12 no-padding">
                 <div class="form-group">
