--- a/webpage/bert.house/en/fr/team.html
+++ b/webpage/bert.house/en/fr/team.html
@@ -301,7 +301,7 @@
                   <div class="cases-item-content pandingO">
                     <h3 class="cases-item-title">Bryan Salazar</h3>
                     <!-- /.cases-item-title -->
-                    <p class="large">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum.</p>
+                    <p class="large">The progressive development of man is vitally dependent on invention (Nikola Tesla)</p>
                   </div>
                   <!-- /.cases-item-content -->
                 </div>
@@ -341,7 +341,7 @@
                 <div class="cases-item-content pandingO">
                   <h3 class="cases-item-title">Ernesto Olivares</h3>
                   <!-- /.cases-item-title -->
-                  <p class="large">Un día sin dibujar no es un buen día (Netoosteles)</p>
+                  <p class="large">Un día sin dibujar no es un buen día</p>
                 </div>
                 <!-- /.cases-item-content -->
               </div>
